粗略的把东西挪完了，具体未知

--- a/_posts/2020-06-03-关于读-paper-ng的课.md
+++ b/_posts/2020-06-03-关于读-paper-ng的课.md
@@ -2,7 +2,8 @@
 layout: post
 title: life：关于读-paper-ng的课
 categories: [随笔]
-tags: paper, cs230
+tags: paper
+tags: cs230
 ---
 
 > 1. how to read a paper
